@@ -1,8 +1,8 @@
 Package: treemap
 Type: Package
-Title: Treemap visualization
-Version: 2.2-1
-Date: 2014-06-04
+Title: Treemap Visualization
+Version: 2.3
+Date: 2015-06-25
 Author: Martijn Tennekes
 Maintainer: Martijn Tennekes <mtennekes@gmail.com>
 Description: A treemap is a space-filling visualization of hierarchical
@@ -17,4 +17,4 @@ Imports:
     gridBase,
     igraph,
     RColorBrewer,
-    shiny (>= 0.8.0)
+    shiny (>= 0.12.0)
